; ModuleID = '/home/carl/AnghaBench/linux/drivers/firewire/extr_nosy.c_reg_set_bits.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/firewire/extr_nosy.c_reg_set_bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcilynx = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pcilynx*, i32, i32)* @reg_set_bits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reg_set_bits(%struct.pcilynx* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.pcilynx*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.pcilynx* %0, %struct.pcilynx** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.pcilynx*, %struct.pcilynx** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load %struct.pcilynx*, %struct.pcilynx** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @reg_read(%struct.pcilynx* %9, i32 %10)
  %12 = load i32, i32* %6, align 4
  %13 = or i32 %11, %12
  %14 = call i32 @reg_write(%struct.pcilynx* %7, i32 %8, i32 %13)
  ret void
}

declare dso_local i32 @reg_write(%struct.pcilynx*, i32, i32) #1

declare dso_local i32 @reg_read(%struct.pcilynx*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
